--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "Simulate operator overloading with template strings",
   "author": "tolking <qw13131wang@gmail.com>",
   "license": "MIT",
-  "main": "lib/index.js",
+  "main": "lib/index.umd.js",
   "module": "lib/index.es.js",
   "types": "lib/index.d.ts",
   "exports": {
     ".": {
       "import": "./lib/index.es.js",
-      "require": "./lib/index.js"
+      "require": "./lib/index.umd.js"
     }
   },
   "scripts": {
     "dev": "tsc -w test/*.ts",
-    "build": "rollup -c rollup.config.js",
+    "build": "vite build",
     "test": "node test/coordinate.js",
     "lint": "eslint . --fix --ext .ts,.js --ignore-pattern \"/lib/\"",
     "prettier": "prettier --write \"src/*.ts\" --ignore-unknown",
@@ -29,9 +29,9 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.3.8",
     "prettier": "^2.6.2",
-    "rollup": "^2.70.2",
-    "rollup-plugin-typescript2": "^0.31.2",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "vite": "^2.9.5",
+    "vitest": "^0.9.3"
   },
   "repository": {
     "type": "git",
