--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     }
   },
   "scripts": {
-    "dev": "tsc -w test/*.ts",
     "build": "vite build",
     "test": "node test/coordinate.js",
     "lint": "eslint . --fix --ext .ts,.js --ignore-pattern \"/lib/\"",
@@ -31,6 +30,7 @@
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
     "vite": "^2.9.5",
+    "vite-plugin-dts": "^1.1.0",
     "vitest": "^0.9.3"
   },
   "repository": {
