--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "target": "ES2015",
     "module":"esnext",
     "lib": ["ESNext", "dom"],
+    "moduleResolution": "Node",
     "outDir": "lib",
     "strict": true,
     "declaration": true
